--- a/package.json
+++ b/package.json
@@ -93,7 +93,7 @@
         "prop-types": "15.6.2",
         "react-dev-utils": "7.0.1",
         "react-hot-loader": "4.6.3",
-        "redux-logger": "3.0.6",
+        "redux-logger": "^3.0.6",
         "style-loader": "0.23.1",
         "stylelint": "9.9.0",
         "url-loader": "1.1.2",
